--- a/webプロ論期末課題/america.html
+++ b/webプロ論期末課題/america.html
@@ -59,7 +59,7 @@
           <div class="spot-text">
             <h3>散歩</h3>
             <p>旅行では早朝に起きて散歩することがあります。少しずつ明るくなっていく中、自由気ままに歩けるのでとても気持ち良いです。</p>
-            <p>出発するときにコーヒーを買いました。スタバはあまり好きではありませんが、早くから開き、現地人と会話をしたかったので購入しました。正確に名前を聞き取ってもらえて良かったです。ちなみに自分で撮った写真がなかったので，コウダイという友人に写真をもらいました．</p>
+            <p>出発するときにコーヒーを買いました。スタバはあまり好きではありませんが、早くから開き、現地人と会話をしたかったので購入しました。ちなみに自分で撮った写真がなかったので，コウダイという友人に写真をもらいました．</p>
           </div>
         </div>
         <!--スポット四つ目-->
